[package]
name = "cis2_ovl"
version = "0.1.0"
authors = ["kosamit <kosamit@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["std", "crypto-primitives"]
crypto-primitives = ["concordium-std/crypto-primitives"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-cis2 = "2.0.0"
concordium-std = "5.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
